mise en page du titre de la page d'acceuil

--- a/page d'aceuil.html
+++ b/page d'aceuil.html
@@ -11,19 +11,23 @@
  <body>
   <header>
    <h1>ohmyfood</h1>
+   <form id="recherche">
+    <input type='submit' />
+    <input type='search' />
+   </form>
   </header>
   <div id="zone_bouton">
    <form action='menu le delices des papille.html' method='post'>
-    <input type='submit' id="bouton_menu1"  />
+    <input type='submit' id="bouton_menu1" value="le delice des papilles" />
    </form>
    <form action='menu la palette du gout.html' method='post'>
-    <input type='submit' id="bouton_menu2" />
+    <input type='submit' id="bouton_menu2" value="la palette des gouts" />
    </form>
    <form action='menu la note enchanter.html' method='post'>
-    <input type='submit' id="bouton_menu3" />
+    <input type='submit' id="bouton_menu3" value="la note enchanter" />
    </form>
    <form action='menu le chic a la francaise.html' method='post'>
-    <input type='submit' id="bouton_menu4" />
+    <input type='submit' id="bouton_menu4" value="le chic a la francaise" />
    </form>
   </div>
  
