--- a/page d'aceuil.html
+++ b/page d'aceuil.html
@@ -12,28 +12,28 @@
   <header>
    <h1>ohmyfood</h1>
    <form id="recherche">
-    <input type='submit' />
-    <input type='search' />
+    <input type='submit' id="boutton_recherche"/>
+    <input type='search'  />
    </form>
   </header>
   <div id="zone_bouton">
-   <form action='menu le delices des papille.html' method='post'>
-    <input type='submit' id="bouton_menu1" value="le delice des papilles" />
-   </form>
-   <form action='menu la palette du gout.html' method='post'>
-    <input type='submit' id="bouton_menu2" value="la palette des gouts" />
-   </form>
    <form action='menu la note enchanter.html' method='post'>
     <input type='submit' id="bouton_menu3" value="la note enchanter" />
    </form>
    <form action='menu le chic a la francaise.html' method='post'>
     <input type='submit' id="bouton_menu4" value="le chic a la francaise" />
    </form>
+   <form action='menu le delices des papille.html' method='post'>
+    <input type='submit' id="bouton_menu1" value="le delice des papilles" />
+   </form>
+   <form action='menu la palette du gout.html' method='post'>
+    <input type='submit' id="bouton_menu2" value="la palette des gouts" />
+   </form>
   </div>
  
  </body> 
  <footer>
- <a href=''>Mention legale</a>
- <a href=''>Contactez-nous</a>
+ <p id="ml">Mention legale</p>
+ <p id="cn">Contactez-nous</p>
  </footer>
 </html>
