--- a/page d'aceuil.html
+++ b/page d'aceuil.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"><!--definition de l'encodage -->
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
   <title>ohmyfood(acceuil)</title><!--definition du titre -->
- <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
+  <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
   <link rel="stylesheet" href="style aceuil.css"/><!--liaison avec la feuille de style css -->
  </head>
  
@@ -17,20 +17,26 @@
    </form>
   </header>
   <div id="zone_bouton">
-   <form action='menu la note enchanter.html' method='post'>
-    <input type='submit' id="bouton_menu3" value="la note enchanter" />
-   </form>
-   <form action='menu le chic a la francaise.html' method='post'>
-    <input type='submit' id="bouton_menu4" value="le chic a la francaise" />
-   </form>
-   <form action='menu le delices des papille.html' method='post'>
-    <input type='submit' id="bouton_menu1" value="le delice des papilles" />
-   </form>
-   <form action='menu la palette du gout.html' method='post'>
-    <input type='submit' id="bouton_menu2" value="la palette des gouts" />
-   </form>
+   <div class="ligne">
+    <form action='menu la note enchanter.html' method='post'>
+     <input type='submit' id="bouton_menu3" value="la note enchanter" />
+    </form>
+    <form action='menu le chic a la francaise.html' method='post'>
+     <input type='submit' id="bouton_menu4" value="le chic a la francaise" />
+    </form>
+   </div>
+   <div class="ligne">
+    <form action='menu le delices des papille.html' method='post'>
+     <input type='submit' id="bouton_menu1" value="le delice des papilles" />
+    </form>
+    <form action='menu la palette du gout.html' method='post'>
+     <input type='submit' id="bouton_menu2" value="la palette des gouts" />
+    </form>
+   </div>
   </div>
- 
+  <form>
+   <input type="button" value="Prochainement" id="bouton_proche"/>
+  </form>
  </body> 
  <footer>
  <p id="ml">Mention legale</p>
