integration des image aux bouton de la page d'acceuil

--- a/page d'aceuil.html
+++ b/page d'aceuil.html
@@ -19,18 +19,18 @@
   <div id="zone_bouton">
    <div class="ligne">
     <form action='menu la note enchanter.html' method='post'>
-     <input type='submit' id="bouton_menu3" value="la note enchanter" />
+     <input type='image' id="bouton_menu3" value="" src="img_note.png" />
     </form>
     <form action='menu le chic a la francaise.html' method='post'>
-     <input type='submit' id="bouton_menu4" value="le chic a la francaise" />
+     <input type='image' id="bouton_menu4" value="" src="img_chic.png" />
     </form>
    </div>
    <div class="ligne">
     <form action='menu le delices des papille.html' method='post'>
-     <input type='submit' id="bouton_menu1" value="le delice des papilles" />
+     <input type='image' id="bouton_menu1"  value="" src="img_papille.png" />
     </form>
     <form action='menu la palette du gout.html' method='post'>
-     <input type='submit' id="bouton_menu2" value="la palette des gouts" />
+     <input type='image' id="bouton_menu2" value="" src="img_palette.png" />
     </form>
    </div>
   </div>
