--- a/menu la note enchanter.html
+++ b/menu la note enchanter.html
@@ -4,15 +4,28 @@
   <meta charset="utf-8"><!--definition de l'encodage -->
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
   <title>ohmyfood(la note enchanter)</title><!--definition du titre -->
- <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
+  <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
   <link rel="stylesheet" href="style menu3.css"/><!--liaison avec la feuille de style css -->
  </head>
  
  <body>
+ <header>
+   <h1>ohmyfood</h1>
+   <form id="recherche">
+    <input type='submit' id="boutton_recherche" value=''/>
+    <input type='search'  />
+   </form>
+  </header>
+  <h2>La note enchantée</h2>
+  <div id="zone_menu">
+    <i class="fas fa-music"></i>
  
  
  
- 
- 
+  </div>
  </body> 
+ <footer>
+  <p id="ml">Mention legale</p>
+  <p id="cn">Contactez-nous</p>
+ </footer>
 </html>
