--- a/menu le delices des papille.html
+++ b/menu le delices des papille.html
@@ -9,10 +9,20 @@
  </head>
  
  <body>
- 
+ <header>
+   <h1>ohmyfood</h1>
+   <form id="recherche">
+    <input type='submit' id="boutton_recherche" value=''/>
+    <input type='search'  />
+   </form>
+  </header>
  
  
  
  
  </body> 
+  <footer>
+ <p id="ml">Mention legale</p>
+ <p id="cn">Contactez-nous</p>
+ </footer>
 </html>
