--- a/page d'aceuil.html
+++ b/page d'aceuil.html
@@ -12,7 +12,7 @@
   <header>
    <h1>ohmyfood</h1>
    <form id="recherche">
-    <input type='submit' id="boutton_recherche"/>
+    <input type='submit' id="boutton_recherche" value='' />
     <input type='search'  />
    </form>
   </header>
