--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
    <input type="button" value="Prochainement" id="bouton_proche"/>
   </form> -->
   <section>
-   <article>a</article>
-  <article>b</article>
-  <article>c</article>
-  <article>d</article>
+   <article id="b_note" ><a href="./menus/menu_la_note_enchantee.html"><i class="fas fa-music"></i><h2 id="m_note">La note enchantée</h2><h3>Menu</h3></a></article>
+  <article id="b_chic"><a href="./menus/menu_le_chic_a_la_francaise.html"><h2>Le chic à la française</h2><h3>Menu</h3></a></article>
+  <article id="b_papille"><a href="./menus/menu_le_delices_des_papille.html"><h2>Le délice des papilles</h2><h3>Menu</h3></a></article>
+  <article id="b_palette"><a href="./menus/menu_la_palette_du_gout.html"><h2>La palette du gout</h2><h3>Menu</h3></a></article>
   
   </section>
  </body> 
