ajout du prochainement sur la page d'acceuil et debut de la mise en page pour le menu note

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
   <article id="b_palette"><a href="./menus/menu_la_palette_du_gout.html"><h2>La palette du gout</h2><h3>Menu</h3></a></article>
   
   </section>
+  <div id="bouton_proch"><a href="#" id="b_proch">Prochainement</a></div>
  </body> 
  <footer>
- <p id="ml">Mention legale</p>
+ <p id="ml">Mentions légales</p>
  <p id="cn">Contactez-nous</p>
  </footer>
 </html>
