--- a/menus/menu_la_palette_du_gout.html
+++ b/menus/menu_la_palette_du_gout.html
@@ -16,9 +16,22 @@
     <input type='search'  />
    </form>
   </header>
- 
- 
- 
+  <h2>La palette du gout</h2>
+  <div id=zone_menu>
+   <h3>La palette du gout</h3>
+   <h4>Esquisse</h4>
+   <div class="platetprix"><p class="plat">Fricassée d'escargot au piment d'espelette</p><p class="prix">60€</p></div>
+   <div class="platetprix"><p class="plat">Oeuf au plat assaisonné à la truffe sur lit de caviar</p><p class="prix">55€</p></div>
+   <div class="platetprix"><p class="plat">Foie gras de canard mi-cuit et ses copeauxde truffe noire</p><p class="prix">65€</p></div>
+   <h4>Oeuvre de maitre</h4>
+   <div class="platetprix"><p class="plat">Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p><p class="prix">70€</p></div>
+   <div class="platetprix"><p class="plat">Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</p><p class="prix">85€</p></div>
+   <div class="platetprix"><p class="plat">Filet de turbot aux agrumes</p><p class="prix">125€</p></div>
+  <h4>Au sommet de l'art</h4>
+   <div class="platetprix"><p class="plat">Paris-Brest revisité</p><p class="prix">55€</p></div>
+   <div class="platetprix"><p class="plat">Macaron au chocolat d'exeption et glace à la vanille de Madagascar</p><p class="prix">65€</p></div>
+   <div class="platetprix"><p class="plat">Mousse au chocolat au piment d'espellette et à la truffe noire</p><p class="prix">60€</p></div>
+  </div>
  
  </body> 
   <footer>
