--- a/menus/menu_le_chic_a_la_francaise.html
+++ b/menus/menu_le_chic_a_la_francaise.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
   <title>ohmyfood(le chic a la francaise)</title><!--definition du titre -->
  <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
-  <link rel="stylesheet" href="../css/style.css"/><!--liaison avec la feuille de style css -->
+  <link rel="stylesheet" href="../css/chic.css"/><!--liaison avec la feuille de style css -->
  </head>
  
  <body>
@@ -16,10 +16,22 @@
     <input type='search'  />
    </form>
   </header>
- 
- 
- 
- 
+ <h2>Le chic à la française</h2>
+ <div id="zone_menu>"
+  <h3>Le chic à la française</h3>
+  <h4>Pour se mettre en appétit</h4>
+  <div class="platetprix"><p class="plat">Tartare de poulpe acidulé aux zest d'orange</p><p class="prix">79€</p></div>
+  <div class="platetprix"><p class="plat">Velouté de légume d'antan</p><p class="prix">57€</p></div>
+  <div class="platetprix"><p class="plat">Soupe à l'oignon revisitée</p><p class="prix">57€</p></div>
+  <h4>Plaisir des papilles</h4>
+  <div class="platetprix"><p class="plat">Coquille Saint-Jacques accompagnées d'une purée de panais</p><p class="prix">95€</p></div>
+  <div class="platetprix"><p class="plat">Magret de canard et parmentier de pommes de terres</p><p class="prix">88€</p></div>
+  <div class="platetprix"><p class="plat">Pigeonneau d'Ille et Vilaine sur son lit de gnocchisaux légumes</p><p class="prix">175€</p></div>
+  <h4>Gourmandises sucrées</h4>
+  <div class="platetprix"><p class="plat">Pétales de violettes glacés et purée de noisettes</p><p class="prix"></p></div>
+  <div class="platetprix"><p class="plat">Fondant au chocolat revisité</p><p class="prix"></p></div>
+  <div class="platetprix"><p class="plat">Millefeuille croustillant</p><p class="prix"></p></div>
+ </div>
  </body> 
   <footer>
  <p id="ml">Mentions légales</p>
