ajout page mention legale + mise en page des menus

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div id="bouton_proch"><a href="#" id="b_proch">Prochainement</a></div>
  </body> 
  <footer>
- <p id="ml">Mentions légales</p>
+ <a href="mention_legale.html" id="ml">Mentions légales</a>
  <p id="cn">Contactez-nous</p>
  </footer>
 </html>
