--- a/menus/menu_le_chic_a_la_francaise.html
+++ b/menus/menu_le_chic_a_la_francaise.html
@@ -17,7 +17,7 @@
    </form>
   </header>
  <h2>Le chic à la française</h2>
- <div id="zone_menu>"
+ <div id="zone_menu">
   <h3>Le chic à la française</h3>
   <h4>Pour se mettre en appétit</h4>
   <div class="platetprix"><p class="plat">Tartare de poulpe acidulé aux zest d'orange</p><p class="prix">79€</p></div>
@@ -34,7 +34,7 @@
  </div>
  </body> 
   <footer>
- <p id="ml">Mentions légales</p>
+ <a href="../mention_legale.html" id="ml">Mentions légales</a>
  <p id="cn">Contactez-nous</p>
  </footer>
 </html>
