--- a/menus/menu_le_delices_des_papille.html
+++ b/menus/menu_le_delices_des_papille.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
   <title>ohmyfood(delice des papilles)</title><!--definition du titre -->
  <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
-  <link rel="stylesheet" href="../css/style.css"/><!--liaison avec la feuille de style css -->
+  <link rel="stylesheet" href="../css/papille.css"/><!--liaison avec la feuille de style css -->
  </head>
  
  <body>
@@ -18,23 +18,23 @@
   </header>
   <h2>Le délice des papilles</h2>
   <div id="zone_menu">
-  <h3>Le délice des papilles</h3> 
-  <h4>Pour bien commencer</h4>
-  <div class="platetprix"><p class="plat">Tartare de thon assaisonné au yuzu</p><p class="prix">55€</p></div>
-  <div class="platetprix"><p class="plat">Bouchée de homard croustillant et sa farandole de petits légumes</p><p class="prix">89€</p></div>
-  <div class="platetprix"><p class="plat">Velouté de cèpes aux truffes</p><p class="prix">56€</p></div>
-  <h4>Pour bien continuer</h4>
-  <div class="platetprix"><p class="plat">Poulet rôti aux herbes de provence et sa crème de truffe</p><p class="prix">110€</p></div>
-  <div class="platetprix"><p class="plat">Langouste rôtie et ses légumes de saison</p><p class="prix">225€</p></div>
-  <div class="platetprix"><p class="plat">Côte de boeuf angus et sa purée de panais</p><p class="prix">115€</p></div>
-  <h4>Pour bien terminer</h4>
-  <div class="platetprix"><p class="plat">Farandole de desserts du chef</p><p class="prix">55€</p></div>
-  <div class="platetprix"><p class="plat">Crème brulée revisitée</p><p class="prix">60€</p></div>
-  <div class="platetprix"><p class="plat">Tiramisu à la noisette</p><p class="prix">55€</p></div>
+   <h3>Le délice des papilles</h3> 
+   <h4>Pour bien commencer</h4>
+   <div class="platetprix"><p class="plat">Tartare de thon assaisonné au yuzu</p><p class="prix">55€</p></div>
+   <div class="platetprix"><p class="plat">Bouchée de homard croustillant et sa farandole de petits légumes</p><p class="prix">89€</p></div>
+   <div class="platetprix"><p class="plat">Velouté de cèpes aux truffes</p><p class="prix">56€</p></div>
+   <h4>Pour bien continuer</h4>
+   <div class="platetprix"><p class="plat">Poulet rôti aux herbes de provence et sa crème de truffe</p><p class="prix">110€</p></div>
+   <div class="platetprix"><p class="plat">Langouste rôtie et ses légumes de saison</p><p class="prix">225€</p></div>
+   <div class="platetprix"><p class="plat">Côte de boeuf angus et sa purée de panais</p><p class="prix">115€</p></div>
+   <h4>Pour bien terminer</h4>
+   <div class="platetprix"><p class="plat">Farandole de desserts du chef</p><p class="prix">55€</p></div>
+   <div class="platetprix"><p class="plat">Crème brulée revisitée</p><p class="prix">60€</p></div>
+   <div class="platetprix"><p class="plat">Tiramisu à la noisette</p><p class="prix">55€</p></div>
   </div>
  </body> 
   <footer>
- <p id="ml">Mentions légales</p>
+ <a href="../mention_legale.html" id="ml">Mentions légales</a>
  <p id="cn">Contactez-nous</p>
  </footer>
 </html>
