--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -57,7 +57,7 @@
   </div>
  </body> 
  <footer>
-  <p id="ml">Mentions légales</p>
+  <a href="../mention_legale.html" id="ml">Mentions légales</a>
   <p id="cn">Contactez-nous</p>
  </footer>
 </html>
