--- a/menus/menu_la_palette_du_gout.html
+++ b/menus/menu_la_palette_du_gout.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
   <title>ohmyfood(palette du gout)</title><!--definition du titre -->
  <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
-  <link rel="stylesheet" href="../css/style.css"/><!--liaison avec la feuille de style css -->
+  <link rel="stylesheet" href="../css/palette.css"/><!--liaison avec la feuille de style css -->
  </head>
  
  <body>
@@ -35,7 +35,7 @@
  
  </body> 
   <footer>
- <p id="ml">Mentions légales</p>
+ <a href="../mention_legale.html" id="ml">Mentions légales</a>
  <p id="cn">Contactez-nous</p>
  </footer>
 </html>
