indentation du code html

--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -22,36 +22,46 @@
     <h3>La note enchantée</h3>
     <h4>Prélude</h4>
 	<div class="platetprix">
-	 <p class="plat">Ravioles de foie gras accompagnés de leur crème à la truffe</p><p class="prix">98€</p><!-- €= altgr+e -->
+	 <p class="plat">Ravioles de foie gras accompagnés de leur crème à la truffe</p>
+	 <p class="prix">98€</p><!-- €= altgr+e -->
 	</div>
     <div class="platetprix">
-	 <p class="plat">Caviar osciètre sur blini à la farine de blé noir</p><p class="prix">115€</p><!-- €= altgr+e -->
+	 <p class="plat">Caviar osciètre sur blini à la farine de blé noir</p>
+	 <p class="prix">115€</p><!-- €= altgr+e -->
 	</div>
 	<div class="platetprix">
-	 <p class="plat">Homard et espuma de potiron mariné aux zests d'orange</p><p class="prix">89€</p><!-- €= altgr+e -->
+	 <p class="plat">Homard et espuma de potiron mariné aux zests d'orange</p>
+	 <p class="prix">89€</p><!-- €= altgr+e -->
 	</div>
 	<div class="platetprix">
-	 <p class="plat">Foie gras de canard cuit entier,confiture de figue et pain toasté</p><p class="prix">105€</p><!-- €= altgr+e -->
+	 <p class="plat">Foie gras de canard cuit entier,confiture de figue et pain toasté</p>
+	 <p class="prix">105€</p><!-- €= altgr+e -->
 	</div>
 	<h4>Point d'orgue</h4>
     <div class="platetprix">
-	 <p class="plat">Noix de coquille Saint-jacques sur lit de purée de céleri-rave</p><p class="prix">102€</p><!-- €= altgr+e -->
+	 <p class="plat">Noix de coquille Saint-jacques sur lit de purée de céleri-rave</p>
+	 <p class="prix">102€</p><!-- €= altgr+e -->
 	</div>
 	<div class="platetprix">
-	 <p class="plat">Langoustine poêlée,purée de patate douce</p><p class="prix">205€</p><!-- €= altgr+e -->
+	 <p class="plat">Langoustine poêlée,purée de patate douce</p>
+	 <p class="prix">205€</p><!-- €= altgr+e -->
 	</div>
 	<div class="platetprix">
-	 <p class="plat">Mijoté de queue de boeuf et riz sauvage aux zests de citron</p><p class="prix">169€</p><!-- €= altgr+e -->
+	 <p class="plat">Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
+	 <p class="prix">169€</p><!-- €= altgr+e -->
 	</div>
 	<h4>Mouvement final</h4>
 	<div class="platetprix">
-	 <p class="plat">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p><p class="prix"></p><!-- €= altgr+e -->
+	 <p class="plat">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
+	 <p class="prix"></p><!-- €= altgr+e -->
 	</div>
 	<div class="platetprix">
-	 <p class="plat">Baba au rhum revisité avec son coulis de citron</p><p class="prix"></p><!-- €= altgr+e -->
+	 <p class="plat">Baba au rhum revisité avec son coulis de citron</p>
+	 <p class="prix"></p><!-- €= altgr+e -->
 	</div>
 	<div class="platetprix">
-	 <p class="plat">Tarte au citron meringuée destructurée</p><p class="prix"></p><!-- €= altgr+e -->
+	 <p class="plat">Tarte au citron meringuée destructurée</p>
+	 <p class="prix"></p><!-- €= altgr+e -->
 	</div>
 	<h5>La note enchantée</h5>
   </div>
