--- a/menus/menu_le_delices_des_papille.html
+++ b/menus/menu_le_delices_des_papille.html
@@ -20,17 +20,44 @@
   <div id="zone_menu">
    <h3>Le délice des papilles</h3> 
    <h4>Pour bien commencer</h4>
-   <div class="platetprix"><p class="plat">Tartare de thon assaisonné au yuzu</p><p class="prix">55€</p></div>
-   <div class="platetprix"><p class="plat">Bouchée de homard croustillant et sa farandole de petits légumes</p><p class="prix">89€</p></div>
-   <div class="platetprix"><p class="plat">Velouté de cèpes aux truffes</p><p class="prix">56€</p></div>
+   <div class="platetprix">
+    <p class="plat">Tartare de thon assaisonné au yuzu</p>
+    <p class="prix">55€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Bouchée de homard croustillant et sa farandole de petits légumes</p>
+    <p class="prix">89€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Velouté de cèpes aux truffes</p>
+    <p class="prix">56€</p>
+   </div>
    <h4>Pour bien continuer</h4>
-   <div class="platetprix"><p class="plat">Poulet rôti aux herbes de provence et sa crème de truffe</p><p class="prix">110€</p></div>
-   <div class="platetprix"><p class="plat">Langouste rôtie et ses légumes de saison</p><p class="prix">225€</p></div>
-   <div class="platetprix"><p class="plat">Côte de boeuf angus et sa purée de panais</p><p class="prix">115€</p></div>
+   <div class="platetprix">
+    <p class="plat">Poulet rôti aux herbes de provence et sa crème de truffe</p>
+    <p class="prix">110€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Langouste rôtie et ses légumes de saison</p>
+    <p class="prix">225€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Côte de boeuf angus et sa purée de panais</p>
+    <p class="prix">115€</p>
+   </div>
    <h4>Pour bien terminer</h4>
-   <div class="platetprix"><p class="plat">Farandole de desserts du chef</p><p class="prix">55€</p></div>
-   <div class="platetprix"><p class="plat">Crème brulée revisitée</p><p class="prix">60€</p></div>
-   <div class="platetprix"><p class="plat">Tiramisu à la noisette</p><p class="prix">55€</p></div>
+   <div class="platetprix">
+    <p class="plat">Farandole de desserts du chef</p>
+    <p class="prix">55€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Crème brulée revisitée</p>
+    <p class="prix">60€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Tiramisu à la noisette</p>
+    <p class="prix">55€</p>
+   </div>
   </div>
  </body> 
   <footer>
