--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <div id="bouton_proch"><a href="#" id="b_proch">Prochainement</a></div>
  </body> 
  <footer>
- <a href="mention_legale.html" id="ml">Mentions légales</a>
+ <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
  <p id="cn">Contactez-nous</p>
  </footer>
 </html>
