modification apparence pour être proche maquette

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <section>
    <article id="b_note" >
     <a href="./menus/menu_la_note_enchantee.html">
-	 <i class="fas fa-music"></i>
+	 <!--<i class="fas fa-music"></i> -->
+    <img src="img/note.JPG"/>
 	 <h2 id="m_note">La note enchantée</h2>
 	 <h3>Menu</h3>
 	</a>
