--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -16,11 +16,12 @@
     <input type='search'  />
    </form>
   </header>
-  <h2>La note enchantée</h2>
+  <h2>La note enchantée </h2>
   <div id="zone_menu">
-    <i class="fas fa-music"></i>
-    <h3>La note enchantée</h3>
-    <h4>Prélude</h4>
+   <!-- <i class="fas fa-music"></i>-->
+    <img src="img/note.JPG"/>
+      <h3>La note enchantée</h3>
+     <h4> <img src="img/barregauche.JPG"/>Prélude<img src="img/barredroite.JPG"/></h4>
 	<div class="platetprix">
 	 <p class="plat">Ravioles de foie gras accompagnés de leur crème à la truffe</p>
 	 <p class="prix">98€</p><!-- €= altgr+e -->
@@ -37,7 +38,7 @@
 	 <p class="plat">Foie gras de canard cuit entier,confiture de figue et pain toasté</p>
 	 <p class="prix">105€</p><!-- €= altgr+e -->
 	</div>
-	<h4>Point d'orgue</h4>
+	 <h4> <img src="img/barregauche.JPG"/>Point d'orgue<img src="img/barredroite.JPG"/></h4>
     <div class="platetprix">
 	 <p class="plat">Noix de coquille Saint-jacques sur lit de purée de céleri-rave</p>
 	 <p class="prix">102€</p><!-- €= altgr+e -->
@@ -50,7 +51,7 @@
 	 <p class="plat">Mijoté de queue de boeuf et riz sauvage aux zests de citron</p>
 	 <p class="prix">169€</p><!-- €= altgr+e -->
 	</div>
-	<h4>Mouvement final</h4>
+	 <h4> <img src="img/barregauche.JPG"/>Mouvement final<img src="img/barredroite.JPG"/></h4>
 	<div class="platetprix">
 	 <p class="plat">Macaron noisette et chocolat, glace au caramel brun et sel de Guérande</p>
 	 <p class="prix"></p><!-- €= altgr+e -->
@@ -63,7 +64,7 @@
 	 <p class="plat">Tarte au citron meringuée destructurée</p>
 	 <p class="prix"></p><!-- €= altgr+e -->
 	</div>
-	<h5>La note enchantée</h5>
+	<h3> <img src="img/note.JPG"/>La note enchantée</h3>
   </div>
  </body> 
  <footer>
