correction footer et animation des bouton menu

--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -65,9 +65,9 @@
 	</div>
 	<h5>La note enchantée</h5>
   </div>
+  <footer>
+   <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
+   <p id="cn">Contactez-nous</p>
+  </footer>
  </body> 
- <footer>
-  <a href="../mention_legale.html" id="ml">Mentions légales</a>
-  <p id="cn">Contactez-nous</p>
- </footer>
 </html>
