--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"><!--definition de l'encodage -->
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
-  <title>ohmyfood(acceuil)</title><!--definition du titre -->
+  <title>Ohmyfood (accueil)</title><!--definition du titre -->
   <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
   <link rel="stylesheet" href="./css/style.css"/><!--liaison avec la feuille de style css -->
  </head>
