--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"><!--definition de l'encodage -->
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
-  <title>ohmyfood(la note enchanter)</title><!--definition du titre -->
+  <title>Ohmyfood (la note enchantée)</title><!--definition du titre -->
   <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
    <link rel="stylesheet" href="../css/note.css"/><!--liaison avec la feuille de style css -->
  </head>
@@ -66,7 +66,7 @@
 	<h5>La note enchantée</h5>
   </div>
   <footer>
-   <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
+   <p><a href="../mention_legale.html" id="ml">Mentions légales</a></p>
    <p id="cn">Contactez-nous</p>
   </footer>
  </body> 
