--- a/menus/menu_le_chic_a_la_francaise.html
+++ b/menus/menu_le_chic_a_la_francaise.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"><!--definition de l'encodage -->
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
-  <title>ohmyfood(le chic a la francaise)</title><!--definition du titre -->
+  <title>Ohmyfood(le chic à la française)</title><!--definition du titre -->
  <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
   <link rel="stylesheet" href="../css/chic.css"/><!--liaison avec la feuille de style css -->
  </head>
