--- a/menus/menu_le_delices_des_papille.html
+++ b/menus/menu_le_delices_des_papille.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"><!--definition de l'encodage -->
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
-  <title>ohmyfood(delice des papilles)</title><!--definition du titre -->
+  <title>Ohmyfood(Le délice des papilles)</title><!--definition du titre -->
  <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
   <link rel="stylesheet" href="../css/papille.css"/><!--liaison avec la feuille de style css -->
  </head>
