ajout des animation du bouton prochainement et de mention legale

--- a/index.html
+++ b/index.html
@@ -65,7 +65,16 @@
   </article>
   
   </section>
-  <div id="bouton_proch"><a href="#" id="b_proch">Prochainement</a></div>
+  <div id="bouton_proch">
+   <a href="#" id="b_proch">Prochainement</a>
+   <div class="load">
+    <div class="load_bar"></div>
+	<div class="load_bar2"></div>
+	<div class="load_bar3"></div>
+    <div class="load_bar4"></div>
+    <div class="load_bar5"></div>
+   </div>
+  </div>
    <footer>
     <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
     <p id="cn">Contactez-nous</p>
