--- a/menus/menu_le_delices_des_papille.html
+++ b/menus/menu_le_delices_des_papille.html
@@ -19,7 +19,7 @@
   <h2>Le délice des papilles</h2>
   <div id="zone_menu">
    <h3>Le délice des papilles</h3> 
-   <h4>Pour bien commencer</h4>
+   <h4><a href="">Pour bien commencer</a></h4>
    <div class="platetprix">
     <p class="plat">Tartare de thon assaisonné au yuzu</p>
     <p class="prix">55€</p>
@@ -32,7 +32,7 @@
     <p class="plat">Velouté de cèpes aux truffes</p>
     <p class="prix">56€</p>
    </div>
-   <h4>Pour bien continuer</h4>
+   <h4><a href="">Pour bien continuer</a></h4>
    <div class="platetprix">
     <p class="plat">Poulet rôti aux herbes de provence et sa crème de truffe</p>
     <p class="prix">110€</p>
@@ -45,7 +45,7 @@
     <p class="plat">Côte de boeuf angus et sa purée de panais</p>
     <p class="prix">115€</p>
    </div>
-   <h4>Pour bien terminer</h4>
+   <h4><a href="">Pour bien terminer</a></h4>
    <div class="platetprix">
     <p class="plat">Farandole de desserts du chef</p>
     <p class="prix">55€</p>
