--- a/menus/menu_la_palette_du_gout.html
+++ b/menus/menu_la_palette_du_gout.html
@@ -19,7 +19,7 @@
   <h2>La palette du gout</h2>
   <div id=zone_menu>
    <h3>La palette du gout</h3>
-   <h4>Esquisse</h4>
+   <h4><a href="">Esquisse</a></h4>
    <div class="platetprix">
     <p class="plat">Fricassée d'escargot au piment d'espelette</p>
     <p class="prix">60€</p>
@@ -32,7 +32,7 @@
     <p class="plat">Foie gras de canard mi-cuit et ses copeauxde truffe noire</p>
     <p class="prix">65€</p>
    </div>
-   <h4>Oeuvre de maitre</h4>
+   <h4><a href="">Oeuvre de maitre</a></h4>
    <div class="platetprix">
     <p class="plat">Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</p>
     <p class="prix">70€</p>
@@ -45,7 +45,7 @@
     <p class="plat">Filet de turbot aux agrumes</p>
     <p class="prix">125€</p>
    </div>
-  <h4>Au sommet de l'art</h4>
+  <h4><a href="">Au sommet de l'art</a></h4>
    <div class="platetprix">
     <p class="plat">Paris-Brest revisité</p>
     <p class="prix">55€</p>
