--- a/menus/menu_le_chic_a_la_francaise.html
+++ b/menus/menu_le_chic_a_la_francaise.html
@@ -19,7 +19,7 @@
  <h2>Le chic à la française</h2>
  <div id="zone_menu">
   <h3>Le chic à la française</h3>
-  <h4>Pour se mettre en appétit</h4>
+  <h4><a href="">Pour se mettre en appétit</a></h4>
   <div class="platetprix">
    <p class="plat">Tartare de poulpe acidulé aux zest d'orange</p>
    <p class="prix">79€</p>
@@ -32,7 +32,7 @@
    <p class="plat">Soupe à l'oignon revisitée</p>
    <p class="prix">57€</p>
   </div>
-  <h4>Plaisir des papilles</h4>
+  <h4><a href="">Plaisir des papilles</a></h4>
   <div class="platetprix">
    <p class="plat">Coquille Saint-Jacques accompagnées d'une purée de panais</p>
    <p class="prix">95€</p>
@@ -45,7 +45,7 @@
    <p class="plat">Pigeonneau d'Ille et Vilaine sur son lit de gnocchisaux légumes</p>
    <p class="prix">175€</p>
   </div>
-  <h4>Gourmandises sucrées</h4>
+  <h4><a href="">Gourmandises sucrées</a></h4>
   <div class="platetprix">
    <p class="plat">Pétales de violettes glacés et purée de noisettes</p>
    <p class="prix"></p>
