ajout de l'animation sur contacter-nous +legere amelioration de la mise en page

--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -67,7 +67,7 @@
   </div>
   <footer>
    <p><a href="../mention_legale.html" id="ml">Mentions légales</a></p>
-   <p id="cn">Contactez-nous</p>
+   <p id="cn"><a href="mailto:prenom.nom@exemple.com">Contactez-nous</a></p>
   </footer>
  </body> 
 </html>
