--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
    <footer>
     <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
-    <p id="cn">Contactez-nous</p>
+    <p id="cn"><a href="mailto:prenom.nom@exemple.com" id="a_exept">Contactez-nous</a></p>
    </footer>
  </body> 
 </html>
