--- a/mention_legale.html
+++ b/mention_legale.html
@@ -20,6 +20,6 @@
  </body> 
  <footer>
   <a href="../mention_legale.html" id="ml">Mentions légales</a>
-  <p id="cn">Contactez-nous</p>
+  <p id="cn"><a href="mailto:prenom.nom@exemple.com">Contactez-nous</a></p>
  </footer>
  </html>
