--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Ohmyfood (accueil)</title><!--definition du titre -->
   <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
   <link rel="stylesheet" href="./css/style.css"/><!--liaison avec la feuille de style css -->
+  <link rel="stylesheet" href="./css/index.css"/><!--liaison avec la feuille de style css -->
  </head>
  
  <body>
@@ -67,13 +68,20 @@
   </section>
   <div id="bouton_proch">
    <a href="#" id="b_proch">Prochainement</a>
-   <div class="load">
-    <div class="load_bar"></div>
-	<div class="load_bar2"></div>
-	<div class="load_bar3"></div>
-    <div class="load_bar4"></div>
-    <div class="load_bar5"></div>
-   </div>
+ <!--  <div class="load">
+        <div class="load_bar"></div>
+        <div class="load_bar2"></div>
+	    <div class="load_bar3"></div>
+        <div class="load_bar4"></div>
+        <div class="load_bar5"></div>
+       </div> -->
+	   <div class="load">
+	    <div class="point1">.</div>
+		<div class="point2">.</div>
+		<div class="point3">.</div>
+		<div class="point4">.</div>
+		<div class="point5">.</div>
+	   </div>
   </div>
    <footer>
     <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
