--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
   <title>Ohmyfood (la note enchantée)</title><!--definition du titre -->
   <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
-   <link rel="stylesheet" href="../css/note.css"/><!--liaison avec la feuille de style css -->
+  <link rel="stylesheet" href="../css/style.css"/><!--liaison avec la feuille de style css -->
+  <link rel="stylesheet" href="../css/note.css"/><!--liaison avec la feuille de style css -->
  </head>
  
  <body>
@@ -67,7 +68,7 @@
   </div>
   <footer>
    <p><a href="../mention_legale.html" id="ml">Mentions légales</a></p>
-   <p ><a href="mailto:prenom.nom@exemple.com" id="cn">Contactez-nous</a></p>
+   <p id="cn"><a href="mailto:prenom.nom@exemple.com">Contactez-nous</a></p>
   </footer>
  </body> 
 </html>
