--- a/menus/menu_la_palette_du_gout.html
+++ b/menus/menu_la_palette_du_gout.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8"><!--definition de l'encodage -->
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
   <title>Ohmyfood (La palette du gout)</title><!--definition du titre -->
- <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
+  <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
+  <link rel="stylesheet" href="../css/style.css"/><!--liaison avec la feuille de style css -->
   <link rel="stylesheet" href="../css/palette.css"/><!--liaison avec la feuille de style css -->
  </head>
  
