ajout de couleur et legere modif de la mise en place

--- a/menus/menu_le_chic_a_la_francaise.html
+++ b/menus/menu_le_chic_a_la_francaise.html
@@ -20,49 +20,55 @@
  <h2>Le chic à la française</h2>
  <div id="zone_menu">
   <h3>Le chic à la française</h3>
-  <h4><a href="">Pour se mettre en appétit</a></h4>
-  <div class="platetprix">
-   <p class="plat">Tartare de poulpe acidulé aux zest d'orange</p>
-   <p class="prix">79€</p>
+  <h4><a href="" class="t1">Pour se mettre en appétit</a></h4>
+  <div class="t1">
+   <div class="platetprix">
+    <p class="plat">Tartare de poulpe acidulé aux zest d'orange</p>
+    <p class="prix">79€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Velouté de légume d'antan</p>
+    <p class="prix">57€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Soupe à l'oignon revisitée</p>
+    <p class="prix">57€</p>
+   </div>
   </div>
-  <div class="platetprix">
-   <p class="plat">Velouté de légume d'antan</p>
-   <p class="prix">57€</p>
+  <h4><a href="" class="t2">Plaisir des papilles</a></h4>
+  <div class="t2">
+   <div class="platetprix">
+    <p class="plat">Coquille Saint-Jacques accompagnées d'une purée de panais</p>
+    <p class="prix">95€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Magret de canard et parmentier de pommes de terres</p>
+    <p class="prix">88€</p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Pigeonneau d'Ille et Vilaine sur son lit de gnocchisaux légumes</p>
+    <p class="prix">175€</p>
+   </div>
   </div>
-  <div class="platetprix">
-   <p class="plat">Soupe à l'oignon revisitée</p>
-   <p class="prix">57€</p>
-  </div>
-  <h4><a href="">Plaisir des papilles</a></h4>
-  <div class="platetprix">
-   <p class="plat">Coquille Saint-Jacques accompagnées d'une purée de panais</p>
-   <p class="prix">95€</p>
-  </div>
-  <div class="platetprix">
-   <p class="plat">Magret de canard et parmentier de pommes de terres</p>
-   <p class="prix">88€</p>
-  </div>
-  <div class="platetprix">
-   <p class="plat">Pigeonneau d'Ille et Vilaine sur son lit de gnocchisaux légumes</p>
-   <p class="prix">175€</p>
-  </div>
-  <h4><a href="">Gourmandises sucrées</a></h4>
-  <div class="platetprix">
-   <p class="plat">Pétales de violettes glacés et purée de noisettes</p>
-   <p class="prix"></p>
-  </div>
-  <div class="platetprix">
-   <p class="plat">Fondant au chocolat revisité</p>
-   <p class="prix"></p>
-  </div>
-  <div class="platetprix">
-   <p class="plat">Millefeuille croustillant</p>
-   <p class="prix"></p>
+  <h4><a href="" class="t3">Gourmandises sucrées</a></h4>
+  <div class="t3">
+   <div class="platetprix">
+    <p class="plat">Pétales de violettes glacés et purée de noisettes</p>
+    <p class="prix"></p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Fondant au chocolat revisité</p>
+    <p class="prix"></p>
+   </div>
+   <div class="platetprix">
+    <p class="plat">Millefeuille croustillant</p>
+    <p class="prix"></p>
+   </div>
   </div>
  </div>
   <footer>
    <a href="../mention_legale.html" id="ml">Mentions légales</a>
-   <p id="cn"><a href="mailto:prenom.nom@exemple.com">Contactez-nous</a></p>
+   <p id="cn"><a href="mailto:contact@ohmyfood.fr">Contactez-nous</a></p>
   </footer>
  </body> 
 </html>
