--- a/index.html
+++ b/index.html
@@ -40,26 +40,26 @@
   </form> -->
   <section>
    <article id="b_note" >
-    <a href="./menus/menu_la_note_enchantee.html">
+    <a href="./menus/menu_la_note_enchantee.html"id="t_note">
 	 <i class="fas fa-music"></i>
 	 <h2 id="m_note">La note enchantée</h2>
 	 <h3>Menu</h3>
 	</a>
    </article>
   <article id="b_chic">
-   <a href="./menus/menu_le_chic_a_la_francaise.html">
+   <a href="./menus/menu_le_chic_a_la_francaise.html" id="t_chic">
     <h2>Le chic à la française</h2>
-	<h3>Menu</h3>
+	<h3 id="m_chic">Menu</h3>
    </a>
   </article>
   <article id="b_papille">
-   <a href="./menus/menu_le_delices_des_papille.html">
+   <a href="./menus/menu_le_delices_des_papille.html" id="t_papille">
     <h2>Le délice des papilles</h2>
 	<h3>Menu</h3>
    </a>
   </article>
   <article id="b_palette">
-   <a href="./menus/menu_la_palette_du_gout.html">
+   <a href="./menus/menu_la_palette_du_gout.html" id="t_palette">
     <h2>La palette du gout</h2>
 	<h3>Menu</h3>
    </a>
@@ -85,7 +85,7 @@
   </div>
    <footer>
     <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
-    <p id="cn"><a href="mailto:prenom.nom@exemple.com" id="a_exept">Contactez-nous</a></p>
+    <p id="cn"><a href="mailto:contact@ohmyfood.fr" id="a_exept">Contactez-nous</a></p>
    </footer>
  </body> 
 </html>
