legere modif de la mise en page

--- a/mention_legale.html
+++ b/mention_legale.html
@@ -17,13 +17,13 @@
     <input type='search'  />
    </form>
   </header>
-<h2>
+<div id="mp">
     <p>MENTIONS LÉGALES DU SITE OHMYFOOD</p>
     <p></p>
 
 Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs du site ohmyfood les présentes mentions légales. Le site ohmyfood est accessible à l'adresse suivante : ohmyfood.fr (ci-après "le Site"). L'accès et l'utilisation du Site sont soumis aux présentes "Mentions légales" détaillées ci-après ainsi qu'aux lois et/ou règlements applicables.
 
-La connexion, l'utilisation et l'accès à ce Site impliquent l'acceptation intégrale et sans réserve de l'internaute de toutes les dispositions des présentes Mentions Légales.</p>
+La connexion, l'utilisation et l'accès à ce site impliquent l'acceptation intégrale et sans réserve de l'internaute de toutes les dispositions des présentes Mentions Légales.</p>
 <p>
 ARTICLE 1 - INFORMATIONS LÉGALES</p>
 <p>
@@ -31,7 +31,7 @@ En vertu de l'Article 6 de la Loi n° 2004-575 du 21 juin 2004 pour la confiance
 
 Le site ohmyfood est édité par : OHMYFOOD SAS ayant son siège social à l'adresse suivante : 1, rue de Vaugirard 75000 PARIS, et immatriculée au numéro suivant : RCS PARIS 814 600 002. Téléphone : +3367000000 Adresse e-mail : contact@ohmyfood.fr ci-après "l'Éditeur"
 
-Le Directeur de publication est : john Gerard Adresse e-mail de contact : contact@ohmyfood.fr ci-après "le Directeur de publication"
+Le directeur de publication est : john Gerard Adresse e-mail de contact : contact@ohmyfood.fr ci-après "le Directeur de publication"
 
 Le site ohmyfood est hébergé par github.com: dont le siège est situé à l'adresse suivante : Vijzelstraat 68-72, 1017 HL Amsterdam Téléphone : +331 80 00 00 00 Adresse e-mail : contact@github.com.fr. ci-après "l'Hébergeur"
 
@@ -40,21 +40,21 @@ Sont considérés comme utilisateurs tout les internautes qui naviguent, lisent,
 ARTICLE 2 - ACCESSIBILITÉ</p>
 <p>
 
-Le Site est par principe accessible aux utilisateurs 24/24h et 7/7j, sauf interruption, programmée ou non, pour des besoins de maintenance ou en cas de force majeure. En cas d'impossibilité d'accès au Site, celui-ci s'engage à faire son maximum afin d'en rétablir l'accès. Le Site ne saurait être tenu pour responsable de tout dommage, quelle qu'en soit la nature, résultant de son indisponibilité.</p>
+Le site est par principe accessible aux utilisateurs 24/24h et 7/7j, sauf interruption, programmée ou non, pour des besoins de maintenance ou en cas de force majeure. En cas d'impossibilité d'accès au site, celui-ci s'engage à faire son maximum afin d'en rétablir l'accès. Le site ne saurait être tenu pour responsable de tout dommage, quelle qu'en soit la nature, résultant de son indisponibilité.</p>
 <p>
 ARTICLE 3 - COLLECTE DE DONNÉES ET LOI INFORMATIQUE ET LIBERTÉS</p>
 <p>
 
-Le Site assume être en conformité avec la loi du 6 janvier 1978 relative à l'informatique, et entre dans la catégorie de la Dispense "DI-007" qui dispense de déclaration les sites web concernant les traitements de données personnelles mis en œuvre par tout organisme privé ou public à des fins d’information et de communication externe. L’Utilisateur est notamment informé que, conformément à l’Article 32 de la Loi "informatique et libertés", les informations communiquées par l’utilisateur du fait des formulaires présents sur le site, sont destinés à l’Editeur, responsable du traitement à des fins de gestion administrative de l'application, les informations transmises par les utilisateurs ne seront jamais transmises à un tiers. À ce titre, l'utilisateur dispose d'un droit d'accès, de rectification et de suppression des informations personnelles le concernant qu'il peut exercer à tout moment en écrivant à l'adresse : contact@ohmyfood.fr
+Le site assume être en conformité avec la loi du 6 janvier 1978 relative à l'informatique, et entre dans la catégorie de la dispense "DI-007" qui dispense de déclaration les sites web concernant les traitements de données personnelles mis en œuvre par tout organisme privé ou public à des fins d’information et de communication externe. L’Utilisateur est notamment informé que, conformément à l’Article 32 de la Loi "informatique et libertés", les informations communiquées par l’utilisateur du fait des formulaires présents sur le site, sont destinés à l’Editeur, responsable du traitement à des fins de gestion administrative de l'application, les informations transmises par les utilisateurs ne seront jamais transmises à un tiers. À ce titre, l'utilisateur dispose d'un droit d'accès, de rectification et de suppression des informations personnelles le concernant qu'il peut exercer à tout moment en écrivant à l'adresse : contact@ohmyfood.fr
 
-Les utilisateurs du Site sont tenus de respecter les dispositions de la Loi "informatique et libertés", dont la violation est passible de sanctions pénales. Ils doivent notamment s’abstenir, s’agissant des données nominatives auxquelles ils accèdent, de toute collecte, de toute utilisation détournée et, d’une manière générale, de tout acte susceptible de porter atteinte à la vie privée ou à la réputation de personnes.</p>
+Les utilisateurs du site sont tenus de respecter les dispositions de la Loi "informatique et libertés", dont la violation est passible de sanctions pénales. Ils doivent notamment s’abstenir, s’agissant des données nominatives auxquelles ils accèdent, de toute collecte, de toute utilisation détournée et, d’une manière générale, de tout acte susceptible de porter atteinte à la vie privée ou à la réputation de personnes.</p>
 
 
 <p>
 ARTICLE 4 - SERVICE D'ANALYSE D'AUDIENCE</p>
 
 <p>
-Le Site utilise Google Analytics, un service d’analyse de site Internet fourni par Google Inc. (Google). Google Analytics utilise des cookies, qui sont des fichiers texte placés sur votre ordinateur, pour aider le site internet à analyser l’utilisation du site par ses utilisateurs. Les données générées par les cookies concernant votre utilisation du site (y compris votre adresse IP) seront transmises et stockées par Google sur des serveurs situés aux États-Unis. Google utilisera cette information dans le but d’évaluer l'utilisation du site, de compiler des rapports sur l’activité du site à destination de l'Editeur et de fournir d’autres services relatifs à l’activité du site et à l’utilisation d’Internet. Google est susceptible de communiquer ces données à des tiers en cas d’obligation légale ou lorsque ces tiers traitent ces données pour le compte de Google, y compris notamment l’Editeur. Google ne recoupera pas l'adresse IP de l'Utilisateur avec toute autre donnée détenue par Google. L'Utilisateur peut désactiver l’utilisation de cookies en sélectionnant les paramètres appropriés de son navigateur.</p>
+Le site utilise Google Analytics, un service d’analyse de site Internet fourni par Google Inc. (Google). Google Analytics utilise des cookies, qui sont des fichiers texte placés sur votre ordinateur, pour aider le site internet à analyser l’utilisation du site par ses utilisateurs. Les données générées par les cookies concernant votre utilisation du site (y compris votre adresse IP) seront transmises et stockées par Google sur des serveurs situés aux États-Unis. Google utilisera cette information dans le but d’évaluer l'utilisation du site, de compiler des rapports sur l’activité du site à destination de l'Editeur et de fournir d’autres services relatifs à l’activité du site et à l’utilisation d’Internet. Google est susceptible de communiquer ces données à des tiers en cas d’obligation légale ou lorsque ces tiers traitent ces données pour le compte de Google, y compris notamment l’Editeur. Google ne recoupera pas l'adresse IP de l'Utilisateur avec toute autre donnée détenue par Google. L'Utilisateur peut désactiver l’utilisation de cookies en sélectionnant les paramètres appropriés de son navigateur.</p>
 <p>
 ARTICLE 5 - LOI APPLICABLE ET JURIDICTION</p>
 <p>
@@ -62,8 +62,8 @@ Les présentes Mentions Légales sont régies par la loi française. En cas de d
 <p>
 ARTICLE 6 - CONTACT</p>
 <p>
-Pour tout signalement de contenus ou d'activités illicites, l'Utilisateur peut contacter l'Éditeur à l'adresse suivante : contact@ohmyfood.fr, ou par courrier recommandé avec accusé de réception adressé à l'Éditeur aux coordonnées précisées dans les présentes mentions légales. Le site ohmyfood vous souhaite une excellente navigation !</p>
-</h2>
+Pour tout signalement de contenus ou d'activités illicites, l'utilisateur peut contacter l'Éditeur à l'adresse suivante : contact@ohmyfood.fr, ou par courrier recommandé avec accusé de réception adressé à l'Éditeur aux coordonnées précisées dans les présentes mentions légales. Le site ohmyfood vous souhaite une excellente navigation !</p>
+ </div>
  <footer>
   <a href="../mention_legale.html" id="ml">Mentions légales</a>
   <p id="cn"><a href="mailto:contact@ohmyfood.fr">Contactez-nous</a></p>
