changement des couleur des hovers des menus suppresion image responsive animation footer

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   <form>
    <input type="button" value="Prochainement" id="bouton_proche"/>
   </form> -->
-  <section>
+  <main>
    <article id="b_note" >
-    <a href="./menus/menu_la_note_enchantee.html"id="t_note">
+    <a href="./menus/menu_la_note_enchantee.html" id="t_note">
 	 <i class="fas fa-music"></i>
 	 <h2 id="m_note">La note enchantée</h2>
 	 <h3>Menu</h3>
@@ -65,7 +65,7 @@
    </a>
   </article>
   
-  </section>
+  </main>
   <div id="bouton_proch">
    <a href="#" id="b_proch">Prochainement</a>
  <!--  <div class="load">
