--- a/menus/menu_la_palette_du_gout.html
+++ b/menus/menu_la_palette_du_gout.html
@@ -17,9 +17,9 @@
     <input type='search'  />
    </form>
   </header>
-  <h2>La palette du gout</h2>
+  <h2>La palette du goût</h2>
   <div id=zone_menu>
-   <h3>La palette du gout</h3>
+   <h3>La palette du goût</h3>
    <h4><a href="">Esquisse</a></h4>
    <div class="platetprix">
     <p class="plat">Fricassée d'escargot au piment d'espelette</p>
