--- a/index.html
+++ b/index.html
@@ -75,13 +75,19 @@
         <div class="load_bar4"></div>
         <div class="load_bar5"></div>
        </div> -->
-	   <div class="load">
+	 <!--  <div class="load">
 	    <div class="point1">.</div>
 		<div class="point2">.</div>
 		<div class="point3">.</div>
 		<div class="point4">.</div>
 		<div class="point5">.</div>
-	   </div>
+	   </div> -->
+	  <div class="load">
+        <div class="point1">.</div>
+	    <div class="point2">.</div>
+		<div class="point3">.</div>
+      </div>	  
+	   
   </div>
    <footer>
     <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
