--- a/menus/menu_le_chic_a_la_francaise.html
+++ b/menus/menu_le_chic_a_la_francaise.html
@@ -35,7 +35,7 @@
     <p class="prix">57€</p>
    </div>
   </div>
-  <h4><a href="" class="t2">Plaisir des papilles</a></h4>
+  <h4 cla><a href="" class="t2">Plaisir des papilles</a></h4>
   <div class="t2">
    <div class="platetprix">
     <p class="plat">Coquille Saint-Jacques accompagnées d'une purée de panais</p>
