--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -68,7 +68,7 @@
   </div>
   <footer>
    <p><a href="../mention_legale.html" id="ml">Mentions légales</a></p>
-   <p id="cn"><a href="mailto:contact@ohmyfood.fr">Contactez-nous</a></p>
+   <p id="cn"><a href="mailto:prenom.nom@exemple.com">Contactez-nous</a></p>
   </footer>
  </body> 
 </html>
