--- a/menus/menu_la_palette_du_gout.html
+++ b/menus/menu_la_palette_du_gout.html
@@ -18,7 +18,7 @@
    </form>
   </header>
   <h2>La palette du goût</h2>
-  <div id=zone_menu>
+  <div id="zone_menu">
    <h3>La palette du goût</h3>
    <h4><a href="">Esquisse</a></h4>
    <div class="platetprix">
