finition mise en page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </article>
   <article id="b_palette">
    <a href="./menus/menu_la_palette_du_gout.html" id="t_palette">
-    <h2>La palette du gout</h2>
+    <h2>La palette du goût</h2>
 	<h3>Menu</h3>
    </a>
   </article>
