--- a/menus/menu_le_delices_des_papille.html
+++ b/menus/menu_le_delices_des_papille.html
@@ -61,8 +61,8 @@
    </div>
   </div>
   <footer>
-   <a href="../mention_legale.html" id="ml">Mentions légales</a>
-   <p id="cn"><a href="mailto:contact@ohmyfood.fr">Contactez-nous</a></p>
+   <p><a href="../mention_legale.html" id="ml">Mentions légales</a></p>
+   <p id="cn"><a href="mailto:prenom.nom@exemple.com">Contactez-nous</a></p>
   </footer>
  </body> 
 </html>
