correction animation prochainement

--- a/index.html
+++ b/index.html
@@ -82,12 +82,16 @@
 		<div class="point4">.</div>
 		<div class="point5">.</div>
 	   </div> -->
-	  <div class="load">
+	<!--  <div class="load">
         <div class="point1">.</div>
 	    <div class="point2">.</div>
 		<div class="point3">.</div>
-      </div>	  
-	   
+      </div>	-->
+	  <div class="loading">
+	   <span></span>
+	   <span></span>
+	   <span></span>
+	  </div> 
   </div>
    <footer>
     <p><a href="mention_legale.html" id="ml">Mentions légales</a></p>
