--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <header>
    <h1>ohmyfood</h1>
    <form id="recherche">
-    <input type='submit' id="boutton_recherche" value='' />
+    <i class="fas fa-search"></i>
+   <!-- <input type='submit' id="boutton_recherche" value='' /> -->
     <input type='search'  />
    </form>
   </header>
@@ -42,24 +43,24 @@
    <article id="b_note" >
     <a href="./menus/menu_la_note_enchantee.html" id="t_note">
 	 <i class="fas fa-music"></i>
-	 <h2 id="m_note">La note enchantée</h2>
+	 <h2>La note enchantée</h2>
 	 <h3>Menu</h3>
 	</a>
    </article>
   <article id="b_chic">
-   <a href="./menus/menu_le_chic_a_la_francaise.html" id="t_chic">
+   <a href="./menus/menu_le_chic_a_la_francaise.html">
     <h2>Le chic à la française</h2>
-	<h3 id="m_chic">Menu</h3>
+	<h3>Menu</h3>
    </a>
   </article>
   <article id="b_papille">
-   <a href="./menus/menu_le_delices_des_papille.html" id="t_papille">
+   <a href="./menus/menu_le_delices_des_papille.html">
     <h2>Le délice des papilles</h2>
 	<h3>Menu</h3>
    </a>
   </article>
   <article id="b_palette">
-   <a href="./menus/menu_la_palette_du_gout.html" id="t_palette">
+   <a href="./menus/menu_la_palette_du_gout.html">
     <h2>La palette du goût</h2>
 	<h3>Menu</h3>
    </a>
@@ -67,7 +68,7 @@
   
   </main>
   <div id="bouton_proch">
-   <a href="#" id="b_proch">Prochainement</a>
+   <a href="#" >Prochainement</a>
  <!--  <div class="load">
         <div class="load_bar"></div>
         <div class="load_bar2"></div>
