--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <form id="recherche">
     <i class="fas fa-search"></i>
    <!-- <input type='submit' id="boutton_recherche" value='' /> -->
-    <input type='search'  />
+    <input type='search' id="search" />
    </form>
   </header>
   <main>
