--- a/menus/menu_la_note_enchantee.html
+++ b/menus/menu_la_note_enchantee.html
@@ -13,8 +13,8 @@
  <header>
    <h1><a href="../index.html">ohmyfood</a></h1>
    <form id="recherche">
-    <input type='submit' id="boutton_recherche" value=''/>
-    <input type='search'  />
+    <i class="fas fa-search"></i>
+    <input type='search' id="search" />
    </form>
   </header>
   <h2>La note enchantée</h2>
