--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Ohmyfood (accueil)</title><!--definition du titre -->
   <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
   <link rel="stylesheet" href="./css/style.css"/><!--liaison avec la feuille de style css -->
-  <link rel="stylesheet" href="./css/index.css"/><!--liaison avec la feuille de style css -->
+  <link rel="stylesheet" href="./css/index.css"/><!--liaison avec la feuille de style css l -->
  </head>
  
  <body>
