--- a/mention_legale.html
+++ b/mention_legale.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width"><!--definition du viewport -->
   <title>ohmyfood(mentions légales)</title><!--definition du titre -->
    <script src="https://kit.fontawesome.com/ef64e49f8a.js" crossorigin="anonymous"></script><!--script font awesome -->
-   <link rel="stylesheet" href="css/style.css"/><!--liaison avec la feuille de style css -->
+   <link rel="stylesheet" href="css/style.css"/><!--liaison avec la feuille de style css  l-->
    <link rel="stylesheet" href="css/mentions_legale.css"/><!--liaison avec la feuille de style css -->
  </head>
 
